Updating layout and subnav with proper Event Alerts names [#153200482]
Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>
Signed-off-by: Ernst Riemer <eriemer@pivotal.io>

--- a/docs-book/config.yml
+++ b/docs-book/config.yml
@@ -16,11 +16,11 @@ public_host: hello
 sections:
   - repository:
       name: docs-content
-    directory: myservice
-    subnav_template: myservice_subnav.erb       
+    directory: event-alerts-for-pcf
+    subnav_template: event-alerts-for-pcf_subnav.erb
 
 template_variables:                             # optional
 
-book_title: Partner Services Template
+book_title: Event Alerts for PCF
 book_repo: docs-book
 layout_repo: docs-layout
